# 2048-CS-G1

./: .clang-format  .gitignore  CMakeLists.txt  anim.cpp  anim.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp  main_test.cpp  math.cpp  math.h  renderer.cpp  renderer.h  state.cpp  state.h  utils.cpp  utils.h
.cache/clangd/index/: main.cpp.8E274BC337C6F27A.idx  main_test.cpp.57854E40EF177152.idx
assets/shaders/: blink.fs.glsl  blink.vs.glsl  main.fs.glsl  main.vs.glsl  sprite.fs.glsl  sprite.vs.glsl
